Update and rename Record and Linkage_NIH data_SiqiWang.ipynb to Record and Linkage_NIH data.ipynb

--- a/Record and Linkage_NIH data.ipynb
+++ b/Record and Linkage_NIH data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# RECORD LINKAGE AND MEASUREMENT\n",
-    "By SiqiWang"
+    "This assignment is written individually by Siqi Wang and is designed by Maryah Garner"
    ]
   },
   {
